--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-#board {
-  margin-top: 10px;
-}
 
-.box {
-  border: 1px solid black;
-  height: 150px;
-}
+
+/*# sourceMappingURL=style.css.map */
