--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-
+.box {
+  box-sizing: border-box;
+  background: #ddd;
+  font-size: 2em;
+  line-height: 4em;
+  border: 5px solid #fff; }
+  .box.x {
+    color: #0f0; }
+  .box.o {
+    color: #f00; }
 
 /*# sourceMappingURL=style.css.map */
