--- a/css/style.scss
+++ b/css/style.scss
@@ -1,13 +1,58 @@
+@mixin transition($transition...) {
+    -moz-transition:    $transition;
+    -o-transition:      $transition;
+    -webkit-transition: $transition;
+    transition:         $transition;
+}
+html{
+	overflow-x: hidden;
+}
+
+
+#modal{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 1000;
+	top: 0;
+	left: -100000px;
+	background:rgba(0,0,0,.3);
+	opacity: 0;
+	&.active{
+		opacity: 1;
+		left: 0;
+		@include transition(opacity .2s);
+	}
+	.container{
+		text-align: center;
+		background:#fff;
+		width: 400px;
+		height: 200px;
+		left: 50%;
+		top: 50%;
+		margin-left: -150px;
+		margin-top: -100px;
+		position: absolute;
+		border-radius: 10px;
+	}
+	p{
+		font-size: 2em;
+		line-height: 4em;
+		text-transform: uppercase;
+	}
+}
+
+
 .box{
 	box-sizing: border-box; 
 	background: #ddd;
-	font-size: 2em;
-	line-height: 4em;
+	font-size: 3em;
+	line-height: 3em;
 	border: 5px solid #fff;
 	&.x{
-		color: #0f0;
+		color: #007F00;
 	}
-	&.o{color: #f00;}
+	&.o{color: #B20000;}
 }
 
 #reset-button-container{text-align: center;
